feat: implementar capa MCP con orquestador escalable
- Añadir orquestador con auto-discovery de mcp-*.js y handshake MCP completo
  (initialize → initialized → tools/list) para compatibilidad con Claude Desktop
- Añadir tres MCPs especializados: mcp-incidencias (OpenAPI), mcp-build (pom.xml),
  mcp-notificaciones (REST notification-service)
- Reorganizar estructura raíz: mcp/, tests/, docs/, .github/
- Añadir 48 tests JS (5 suites) y corregir NotificacionesResponseDTO + controller
- Actualizar Angular actividad component para consumir nuevo DTO de notificaciones

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>